# cpp17-instruction-pipeline

./: .CMakeLists.txt.kate-swp  .gitmodules  CMakeLists.txt  a.out
.pwt/default/: pw.json  trainer.json
debug_BUILD/: CMakeCache.txt  Makefile  cmake_install.cmake
debug_BUILD/src/: cmake_install.cmake
debug_BUILD/src/hardware/: testBuilder_executables_hardware_test_01
debug_BUILD/src/pipeline/: Makefile  cmake_install.cmake  testBuilder_executables_pipeline
debug_BUILD/tests/: Makefile  cmake_install.cmake  testBuilder_executables_Hardware_Tests
debug_EXECUTABLE/: Hardware_Tests  hardware_test_01  pipeline
dependancies/textEdit/: CMakeLists.txt
dependancies/textEdit/debug_BUILD/: CMakeCache.txt  Makefile  cmake_install.cmake
dependancies/textEdit/debug_BUILD/src/: Makefile  cmake_install.cmake  testBuilder_executables_textEditDemo
dependancies/textEdit/debug_BUILD/testBuilder/: Makefile  cmake_install.cmake
dependancies/textEdit/src/: CMakeLists.txt  textEdit.cpp
include/: .Hardware.hpp.kate-swp  Hardware.hpp
src/: CMakeLists.txt
src/hardware/: hardware.cpp
src/pipeline/: CMakeLists.txt  pipeline_v3.cpp  pipeline_v3_g.cpp  pipeline_v3_h.cpp
testBuilder/: CMakeLists.txt
tests/: CMakeLists.txt  Hardware_Tests.cpp
